--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -42,6 +42,7 @@ blocks:
       prologue:
         commands:
           - checkout
+          - nvm install 16.16.0
           - nvm use
           - node --version
           - npm --version
@@ -66,6 +67,7 @@ blocks:
       prologue:
         commands:
           - checkout
+          - nvm install 16.16.0
           - nvm use
           - node --version
           - npm --version
@@ -96,6 +98,7 @@ blocks:
       prologue:
         commands:
           - checkout
+          - nvm install 16.16.0
           - nvm use
           - node --version
           - npm --version
