--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -4,6 +4,10 @@ agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu2004
+  containers:
+    - name: main
+      image: ''
+image: 'node:16.16.0'
 blocks:
   - name: "\U0001F4E6 Install dependencies"
     task:
