Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -6,7 +6,7 @@ agent:
     os_image: ubuntu2004
   containers:
     - name: main
-      image: 'node:16.16.0'
+      image: 'docker.io/node:16.16.0'
 blocks:
   - name: "\U0001F4E6 Install dependencies"
     task:
