Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -18,7 +18,6 @@ blocks:
       prologue:
         commands:
           - checkout
-          - nvm install 16.16.0
           - nvm use
           - node --version
           - npm --version
@@ -35,6 +34,10 @@ blocks:
             - 'cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master'
             - npm install --legacy-peer-deps
             - cache store server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json) node_modules
+      agent:
+        machine:
+          type: s1-4x-small
+          os_image: ''
   - name: "\U0001F50D Lint"
     task:
       env_vars:
@@ -45,7 +48,6 @@ blocks:
       prologue:
         commands:
           - checkout
-          - nvm install 16.16.0
           - nvm use
           - node --version
           - npm --version
@@ -74,7 +76,6 @@ blocks:
       prologue:
         commands:
           - checkout
-          - nvm install 16.16.0
           - nvm use
           - node --version
           - npm --version
@@ -109,7 +110,6 @@ blocks:
       prologue:
         commands:
           - checkout
-          - nvm install 16.16.0
           - nvm use
           - node --version
           - npm --version
