--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -23,10 +23,7 @@ blocks:
       jobs:
         - name: client npm install and cache
           commands:
-            - cd src/client
-            - 'cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master'
-            - npm install
-            - cache store client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json) node_modules
+            - 'sleep 1200 - cd src/client - ''cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master'' - npm install - cache store client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json) node_modules'
         - name: server npm install and cache
           commands:
             - cd src/server
