--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,6 +10,9 @@ agent:
     - name: db
       image: 'registry.semaphoreci.com/postgres:9.6'
       user: postgres
+      env_vars:
+        - name: POSTGRES_PASSOWRD
+          value: ''
 blocks:
   - name: "\U0001F4E6 Install dependencies"
     task:
