--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -11,7 +11,7 @@ agent:
       image: 'registry.semaphoreci.com/postgres:9.6'
       user: postgres
       env_vars:
-        - name: POSTGRES_PASSOWRD
+        - name: POSTGRES_PASSWORD
           value: ''
 blocks:
   - name: "\U0001F4E6 Install dependencies"
