--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -16,6 +16,19 @@ agent:
 blocks:
   - name: "\U0001F4E6 Install dependencies"
     task:
+      agent:
+        machine:
+          type: s1-bp-ubuntu-latest-x64-2x
+          os_image: ''
+        containers:
+          - name: main
+            image: 'docker.io/node:16.16.0'
+          - name: db
+            image: 'registry.semaphoreci.com/postgres:9.6'
+            user: postgres
+            env_vars:
+              - name: POSTGRES_HOST_AUTH_METHOD
+                value: trust
       env_vars:
         - name: NODE_ENV
           value: test
