--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -7,6 +7,10 @@ agent:
   containers:
     - name: main
       image: 'docker.io/node:16.16.0'
+global_job_config:
+  prologue:
+    commands:
+      - apt-get update && apt-get install -y postgresql-client
 blocks:
   - name: "\U0001F4E6 Install dependencies"
     task:
