--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,8 +10,7 @@ agent:
 global_job_config:
   prologue:
     commands:
-      - echo 'content' > s.txt
-      - artifact push workflow s.txt
+      - mkdir test_dir - touch test_dir/test - cache store test1 .
 blocks:
   - name: "\U0001F4E6 Install dependencies"
     task:
@@ -41,16 +40,21 @@ blocks:
       jobs:
         - name: client npm install and cache
           commands:
-            - artifact pull workflow s.txt
-            - cat s.txt
-            - sleep exit 0
+            - cache restore test1
+            - ls -a
+            - ls test_dir/*
+            - apt-get update && apt-get install -y postgresql-client
+            - sleep 1200
             - cd src/client
             - 'cache restore client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),client-node-modules-$SEMAPHORE_GIT_BRANCH,client-node-modules-master'
             - npm install
             - cache store client-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json) node_modules
         - name: server npm install and cache
           commands:
-            - 'exit 0 - cd src/server - ''cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master'' - npm install --legacy-peer-deps - cache store server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json) node_modules'
+            - cd src/server
+            - 'cache restore server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json),server-node-modules-$SEMAPHORE_GIT_BRANCH,server-node-modules-master'
+            - npm install --legacy-peer-deps
+            - cache store server-node-modules-$SEMAPHORE_GIT_BRANCH-$(checksum package-lock.json) node_modules
   - name: "\U0001F50D Lint"
     task:
       env_vars:
