--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,7 +10,9 @@ agent:
 global_job_config:
   prologue:
     commands:
-      - mkdir test_dir - touch test_dir/test - cache store test1 .
+      - mkdir test_dir
+      - touch test_dir/test
+      - cache store test1 .
 blocks:
   - name: "\U0001F4E6 Install dependencies"
     task:
