--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,7 +12,8 @@ global_job_config:
     commands:
       - mkdir test_dir
       - touch test_dir/test
-      - cache store test11 .
+      - sleep 1000
+      - cache store test12 .
 blocks:
   - name: "\U0001F4E6 Install dependencies"
     task:
