--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -7,6 +7,8 @@ agent:
   containers:
     - name: main
       image: 'registry.semaphoreci.com/node:18-browsers'
+queue:
+  processing: parallel
 blocks:
   - name: "\U0001F4E6 Install dependencies"
     task:
